--- a/lanxc-applism/CMakeLists.txt
+++ b/lanxc-applism/CMakeLists.txt
@@ -35,33 +35,33 @@ include(CMakePackageConfigHelpers)
 
 # Write version file to build dir
 write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/lanxc-applism-config-version.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
     VERSION 1.0
     COMPATIBILITY SameMajorVersion
 )
 
 # Install version file
 install(FILES
-        "${CMAKE_CURRENT_BINARY_DIR}/lanxc-applism-config-version.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
         DESTINATION lib/cmake/lanxc/
         )
 
 # Export targets
-install(TARGETS lanxc-applism
-        EXPORT lanxc-applism-targets
+install(TARGETS ${PROJECT_NAME}
+        EXPORT ${PROJECT_NAME}-targets
         DESTINATION lib)
 
-install(EXPORT lanxc-applism-targets
-        FILE lanxc-applism-targets.cmake
+install(EXPORT ${PROJECT_NAME}-targets
+        FILE ${PROJECT_NAME}-targets.cmake
         NAMESPACE lanxc::
         DESTINATION lib/cmake/lanxc
         )
 
 # Package config file
-configure_file("lanxc-applism-config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/lanxc-applism-config.cmake")
+configure_file("${PROJECT_NAME}-config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake")
 
 # Install package config file
-install(FILES lanxc-applism-config.cmake
+install(FILES ${PROJECT_NAME}-config.cmake
         DESTINATION lib/cmake/lanxc
         )
 
