--- a/lanxc-unixy/CMakeLists.txt
+++ b/lanxc-unixy/CMakeLists.txt
@@ -13,9 +13,6 @@ if (BUILD_SHARED_LIBS)
   set_target_properties(lanxc-unixy PROPERTIES C_VISIBILITY_PRESET hidden)
 endif()
 set_target_properties(lanxc-unixy PROPERTIES EXPORT_NAME unixy)
-#
-#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/lanxc/core-unix/config.hpp.in
-#               ${CMAKE_CURRENT_BINARY_DIR}/include/lanxc/core-unix/config.hpp)
 
 
 target_include_directories(lanxc-unixy PUBLIC
@@ -31,33 +28,33 @@ include(CMakePackageConfigHelpers)
 
 # Write version file to build dir
 write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/lanxc-unixy-config-version.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
     VERSION 1.0
     COMPATIBILITY SameMajorVersion
 )
 
 # Install version file
 install(FILES
-        "${CMAKE_CURRENT_BINARY_DIR}/lanxc-unixy-config-version.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
         DESTINATION lib/cmake/lanxc/
         )
 
 # Export targets
-install(TARGETS lanxc-unixy
-        EXPORT lanxc-unixy-targets
+install(TARGETS ${PROJECT_NAME}
+        EXPORT ${PROJECT_NAME}-targets
         DESTINATION lib)
 
-install(EXPORT lanxc-unixy-targets
-        FILE lanxc-unixy-targets.cmake
+install(EXPORT ${PROJECT_NAME}-targets
+        FILE ${PROJECT_NAME}-targets.cmake
         NAMESPACE lanxc::
         DESTINATION lib/cmake/lanxc
         )
 
 # Package config file
-configure_file("lanxc-unixy-config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/lanxc-unixy-config.cmake")
+configure_file("${PROJECT_NAME}-config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake")
 
 # Install package config file
-install(FILES lanxc-unixy-config.cmake
+install(FILES ${PROJECT_NAME}-config.cmake
         DESTINATION lib/cmake/lanxc
         )
 
